# AdventOfCode

./: .gitignore
2025/Day1/: CMakeLists.txt  compile_commands.json  main.cpp
2025/Day1/.cache/clangd/index/: main.cpp.C2D408690AC0B1CF.idx
2025/Day1/resources/: inputtest.txt
2025/Day2/: CMakeLists.txt  main.cpp
